2003-01-30  Mark Mitchell  <mark@codesourcery.com>

	* qm/fields.py (Field.class_name): Remove.
	(Field.MakeDomNode): Adjust accordingly.
	(IntegerField.class_name): Remove.
	(TextField.class_name): Likewise.
	(TupleField.class_name): Likewise.
	(SetField.class_name): Likewise.
	(AttachmentField.class_name): Likewise.
	(EnumerationField.class_name): Likewise.
	(TimeField.class_name): Likewise.
	(UidField.class_name): Likewise.
	(from_dom_node): Remove.
	* qm/test/database.py (ItemDescriptor.GetResources): New method.
	(TestDescriptor.GetResources): Remove.
	* qm/test/runnable.py (Runnable.ResourceField): New class.
	(Runnable.arguments): Add resources.
	* qm/test/target.py (Target.RunTest): Use __SetUpResources.
	(Target._SetUpResource): Likewise.
	(Target.__SetUpResources): New method.
	* qm/test/test.py (Test.ResourceField): Remove.
	(Test.ResourceField): Remove.
	(Test.arguments): Remove resources field.
	* qm/test/classes/file.py (SubstitutionField.class_name): Remove.
	
2003-01-21  Jeffrey D. Oldham  <oldham@codesourcery.com>

	* qm/fields.py (AttachmentField): Fix typo in introductory
	comment.

2003-01-21  Jeffrey D. Oldham  <oldham@codesourcery.com>

	* qm/test/target.py (Target._RecordResult): Always record the
	target which the concurrent execution code assumes exists.

2003-01-21  Jeffrey D. Oldham  <oldham@codesourcery.com>

	* qm/test/execution_engine.py (ExecutionEngine._RunTests): Fix
	documentation mistake.  Fix typo in comment.
	(ExecutionEngine._Trace): Remove extraneous comma in parameter
	list.

2003-01-03  Mark Mitchell  <mark@codesourcery.com>

	* qm/test/database.py (ItemDescriptor.__init__): Do not set
	__working_directory.
	(ItemDescriptor.SetWorkingDirectory): Remove.
	(ItemDescriptor.GetWorkingDirectory): Likewise.
	(ItemDescriptor._Execute): Do not change directories.
	* qm/test/classes/xml_database.py (XMLDatabase.__LoadItem): Do not
	use SetWorkingDirectory.
	
2003-01-02  Mark Mitchell  <mark@codesourcery.com>
